--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22nsWRmqFX%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%2C%22100095349618966%22%3A%22OR9ubYTh%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
-    },
-    {
-        "key": "datr",
-        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
     },
     {
         "key": "sb",
-        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +23,44 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
     },
     {
-        "key": "dpr",
-        "value": "1.6497068405151367",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.7737884521484375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
+    },
+    {
+        "key": "datr",
+        "value": "W1WnZvgZez30YpN2LMPXXIe1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
     },
     {
         "key": "locale",
@@ -68,26 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2587%3Btimestamp%3A1723361450",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.301Z",
+        "lastAccessed": "2024-08-13T05:41:29.301Z"
     },
     {
         "key": "wd",
-        "value": "720x1329",
+        "value": "1060x2084",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.302Z",
+        "lastAccessed": "2024-08-13T05:41:29.302Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.302Z",
+        "lastAccessed": "2024-08-13T05:41:29.302Z"
     },
     {
         "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWXxaDzMoO74phhvEkTIlVsXZyQ.BmuZOG..AAA.0.0.Bmut5j.AWW6MDKzlyI",
+        "value": "1v6xpc83aiNfJP8UE.AWWvzrF4TGmDZAlJGV7NW9TSjNU.BmuvH7..AAA.0.0.BmuvH7.AWWBO1epAHw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.302Z",
+        "lastAccessed": "2024-08-13T05:41:29.302Z"
     },
     {
         "key": "xs",
-        "value": "30%3Ai7rQAWFM-cFneQ%3A2%3A1723522660%3A-1%3A14749",
+        "value": "17%3AK6uQb9Q-hHjM6g%3A2%3A1723525906%3A-1%3A14749%3A%3AAcWOALN7OEbR9Gjrh4rhgc_T3ttAO_vGE6oDYvX95Q",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.973Z"
+        "creation": "2024-08-13T05:41:29.302Z",
+        "lastAccessed": "2024-08-13T05:41:29.302Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101031150%3BT%3A28725377",
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723527678412%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.973Z",
-        "lastAccessed": "2024-08-13T04:36:40.974Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2591%3Btimestamp%3A1723522662",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T04:36:40.974Z",
-        "lastAccessed": "2024-08-13T04:36:40.974Z"
+        "creation": "2024-08-13T05:41:29.302Z",
+        "lastAccessed": "2024-08-13T05:41:29.302Z"
     }
 ]
