--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22nsWRmqFX%22%2C%2261551474205816%22%3A%22s2z4eagY%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%2C%22100095349618966%22%3A%22OR9ubYTh%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
-    },
-    {
-        "key": "datr",
-        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
         "key": "sb",
-        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +23,44 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
-        "key": "dpr",
-        "value": "1.6497068405151367",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.7737884521484375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
+    },
+    {
+        "key": "datr",
+        "value": "W1WnZvgZez30YpN2LMPXXIe1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
         "key": "locale",
@@ -68,26 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2587%3Btimestamp%3A1723361450",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
         "key": "wd",
-        "value": "720x1329",
+        "value": "1060x2084",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
-    },
-    {
-        "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWVPDnHJ5iV3jzkzhow1syljHGY.BmuZOG..AAA.0.0.Bmu064.AWXqdYh92Ko",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
         "key": "xs",
-        "value": "17%3A0UtrZvTsB2gdkA%3A2%3A1723551416%3A-1%3A14749",
+        "value": "6%3Aiz_0mOLsrwAvRQ%3A2%3A1723621676%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.733Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2591%3Btimestamp%3A1723551419",
+        "key": "fr",
+        "value": "1Bh4u6gcqyGTHCWvx.AWWmfpXUCGEV1hxIblwOKYD0EC4.BmuGhz..AAA.0.0.BmvGEv.AWX710nLIUQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.733Z",
-        "lastAccessed": "2024-08-13T12:17:28.734Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100725878%3BT%3A28725857",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-13T12:17:28.734Z",
-        "lastAccessed": "2024-08-13T12:17:28.734Z"
+        "creation": "2024-08-14T07:48:13.653Z",
+        "lastAccessed": "2024-08-14T07:48:13.653Z"
     }
 ]
