--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,39 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%2C%22100095349618966%22%3A%22OR9ubYTh%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22nsWRmqFX%22%2C%2261551474205816%22%3A%22s2z4eagY%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
+    },
+    {
+        "key": "datr",
+        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "sb",
-        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
+        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
-        "key": "ps_n",
-        "value": "1",
+        "key": "vpd",
+        "value": "v1%3B665x360x1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "ps_l",
@@ -32,35 +41,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "dpr",
-        "value": "2.7737884521484375",
+        "value": "1.6497068405151367",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B708x360x2.518298864364624",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
-    },
-    {
-        "key": "datr",
-        "value": "W1WnZvgZez30YpN2LMPXXIe1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "locale",
@@ -68,26 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2587%3Btimestamp%3A1723361450",
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "wd",
-        "value": "1060x2084",
+        "value": "720x1329",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "c_user",
@@ -95,25 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
-    },
-    {
-        "key": "xs",
-        "value": "6%3Aiz_0mOLsrwAvRQ%3A2%3A1723621676%3A-1%3A14749",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     },
     {
         "key": "fr",
-        "value": "1Bh4u6gcqyGTHCWvx.AWWmfpXUCGEV1hxIblwOKYD0EC4.BmuGhz..AAA.0.0.BmvGEv.AWX710nLIUQ",
+        "value": "0AbdJG6jOAE5DAe56.AWVsy_IiMtx1IHDizGsb4T0NWa4.BmuZOG..AAA.0.0.BmvZHq.AWWW5ZLRu5g",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-14T07:48:13.653Z",
-        "lastAccessed": "2024-08-14T07:48:13.653Z"
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
+    },
+    {
+        "key": "xs",
+        "value": "49%3AHV7vH8F7vLJBrA%3A2%3A1723699690%3A-1%3A14749",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101228391%3BT%3A28728328",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2591%3Btimestamp%3A1723699693",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-15T05:28:27.052Z",
+        "lastAccessed": "2024-08-15T05:28:27.052Z"
     }
 ]
