--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22nsWRmqFX%22%2C%2261551474205816%22%3A%22s2z4eagY%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22nsWRmqFX%22%2C%2261551474205816%22%3A%2217fVnWJZ%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
-    },
-    {
-        "key": "dpr",
-        "value": "1.6497068405151367",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "locale",
@@ -68,8 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWWPnfc1EwRw69TGItRvywUdsZ0.BmuZOG..AAA.0.0.Bmvv3Q.AWUqZ5vh8r0",
+        "value": "0AbdJG6jOAE5DAe56.AWXtvzXI1AezQ_xNFXwaIa28kd0.BmuZOG..AAA.0.0.BmwB_C.AWVeiKE3Nas",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "xs",
-        "value": "36%3A2629mf4zm9h9qw%3A2%3A1723792849%3A-1%3A14749",
+        "value": "34%3AsXsEz5APud_inw%3A2%3A1723867074%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "fbl_st",
-        "value": "101220196%3BT%3A28729880",
+        "value": "101032969%3BT%3A28731117",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2594%3Btimestamp%3A1723792852",
+        "value": "v2%3Bclient_version%3A2595%3Btimestamp%3A1723867078",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-16T07:21:35.694Z",
-        "lastAccessed": "2024-08-16T07:21:35.694Z"
+        "creation": "2024-08-17T04:03:36.583Z",
+        "lastAccessed": "2024-08-17T04:03:36.583Z"
     }
 ]
